syntax = "proto3";

package com.lightbend.iot.city.subscribe;

import "akkaserverless/annotations.proto";
import "com/lightbend/iot/city/api/city_api.proto";
import "google/protobuf/empty.proto";

message AddLocationEvent{
    string city_id = 1;
    int32 longitude = 2 ;
    int32 latitude = 3 ;
    string placeId = 4 ;
}

message AddWeatherEvent{
    string city_id = 1;
    string weather = 2;
}

message AddHashTagEvent {
    string city_id = 1;
    string hashTag = 2;
}

service CityTopicSubscription {
    option (akkaserverless.service) = {
        type : SERVICE_TYPE_ACTION
    };
    rpc AddLocationViaTopic(AddLocationEvent) returns (google.protobuf.Empty){
        option (akkaserverless.method).eventing.in = {
            topic:  "city-events"
        };
    };
    rpc AddWeatherViaTopic(AddWeatherEvent) returns (google.protobuf.Empty){
        option (akkaserverless.method).eventing.in = {
            topic:  "city-events"
        };
    };

    rpc AddHashTagViaTopic(AddHashTagEvent) returns (google.protobuf.Empty){
        option (akkaserverless.method).eventing.in = {
            topic:  "city-events"
        };
    };
}
